# cpp20_modules

./: .gitignore  CMakeLists.txt
ImportTest/: CMakeLists.txt  main.cpp
LibraryTest/: CMakeLists.txt  library.ixx  library_impl.cpp  sdl.ixx
